[project]
name = "act-sdk"
version = "0.1.0"
description = "Python SDK for ACT components"
requires-python = ">=3.12"
dependencies = [
    "cbor2>=5.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0",
    "ruff>=0.15",
    "ty>=0.0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/act_sdk"]
