[project]
name = "act-sdk"
version = "0.2.0"
description = "Python SDK for ACT components"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT OR Apache-2.0"
keywords = ["act", "wasm", "component-model", "mcp", "ai", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Pin <6 — cbor2 6.0 was rewritten to use a Rust C-extension; we need
    # the pure-Python implementation to work inside componentize-py.
    "cbor2>=5.9.0,<6",
]

[project.urls]
Homepage = "https://actcore.dev"
Repository = "https://github.com/actcore/act-sdk-py"
Issues = "https://github.com/actcore/act-sdk-py/issues"

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0",
    "ruff>=0.15",
    "ty>=0.0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/act_sdk"]
